Fixed Header and text padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
 
 footer {
   background-color: #E6E6E6;
+  text-align: center;
 }
 
 h1, h2, h3, h4 {
@@ -62,6 +63,7 @@ header {
   padding: 10px;
   background-color: #ffffff;
   position: fixed;
+  width: 100%;
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -100,6 +102,8 @@ nav>ul>li>a {
 
 main {
   padding-top: 150px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 a {
@@ -234,6 +238,9 @@ a:active {
 Medium devices (640px and larger)
 ==================================== */
 @media only screen and (min-width: 640px) {
+  .logo {
+    float:left;
+  }
   header {
     text-align: unset;
     padding: 20px 0 13px;
